// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders children 1`] = `"Context Provider Children"`;

exports[`returns default value for suffix 1`] = `
Object {
  "productURLSuffix": ".html",
}
`;

exports[`returns value from backend 1`] = `
Object {
  "productURLSuffix": ".jsx",
}
`;
